--- a/lab4/README
+++ b/lab4/README
@@ -1,1 +1,34 @@
+#########################
+####		A		 ####
+#########################
+for question A, after compiling the first section code and using nm to list the object, we can see
 
+0000000100401080 T _Z7averagePdRd
+00000001004010ae T _Z7averageif
+...
+00000001004010da T main
+
+in terminal.
+
+0000000100401080 T _Z7averagePdRd 	represents the address of the function average(double*, double&) (pointer to double, reference to double) in the object file.
+00000001004010ae T _Z7averageif 	represents the address of the function average(int, float) in the object file.
+
+#########################
+####		B		 ####
+#########################
+for question B, after compiling the second section code and using nm to list the object, we can see
+
+$ ./lab4b
+1 8
+4 8
+4 8
+8 8
+
+we can observe that:
+char cost 1 byte to store a character,
+int cost 4 bytes to store an integer,
+float cost 4 bytes to store a float,
+and double cost 8 bytes to store a double.
+
+however the size of the pointer is always 8 bytes, no matter what type of data it points to.
+This is because pointer stores the address of the data, and the address is always 8 bytes long.
